# src/swagger.json
@@ -1,18 +1,19 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "RentaLX Documentation",
+        "title": "RentX Documentation",
         "description": "This is an API Rent",
         "version": "1.0.0",
         "contact": {
             "email": "marcoantnovo@gmail.com"
         }
-
     },
     "paths": {
         "/categories": {
             "post": {
-                "tags": ["Category"],
+                "tags": [
+                    "Category"
+                ],
                 "summary": "Create a category",
                 "description": "Create a new category",
                 "requestBody": {
@@ -45,17 +46,18 @@
                     }
                 }
             },
-
             "get": {
-                "tags":["Category"],
+                "tags": [
+                    "Category"
+                ],
                 "summary": "List All Categories",
                 "description": "list all categories",
                 "responses": {
                     "200": {
                         "description": "Sucess",
                         "content": {
-                            "application/json" : {
-                                "schema":{
+                            "application/json": {
+                                "schema": {
                                     "type": "array",
                                     "items": {
                                         "type": "object",
@@ -71,11 +73,77 @@
                                 }
                             }
                         }
-
+                    }
+                }
+            }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Upload a new category",
+                "description": "Upload a new category",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags": [
+                    "Specifications"
+                ],
+                "summary": "Create a specification",
+                "description": "Create a new specification",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Specification already exists!"
                     }
                 }
             }
         }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                }
+            }
+        }
     }
-
 }
